syntax = "proto3";

package taskguild.v1;

import "google/protobuf/timestamp.proto";

// PermissionService manages project-scoped permission rules (allow/ask/deny)
// for Claude Code tools and Bash command patterns.
service PermissionService {
  // GetPermissions returns the permission set for a project.
  // Returns empty lists if none exist yet.
  rpc GetPermissions(GetPermissionsRequest) returns (GetPermissionsResponse);

  // UpdatePermissions replaces the full permission set for a project.
  rpc UpdatePermissions(UpdatePermissionsRequest) returns (UpdatePermissionsResponse);

  // SyncPermissionsFromDir reads .claude/settings.json from the given directory
  // and merges its permission rules (allow/ask/deny) into the stored set.
  rpc SyncPermissionsFromDir(SyncPermissionsFromDirRequest) returns (SyncPermissionsFromDirResponse);
}

// PermissionSet represents a project-scoped set of permission rules.
message PermissionSet {
  string project_id = 1;
  repeated string allow = 2;
  repeated string ask = 3;
  repeated string deny = 4;
  google.protobuf.Timestamp updated_at = 5;
}

message GetPermissionsRequest {
  string project_id = 1;
}
message GetPermissionsResponse {
  PermissionSet permissions = 1;
}

message UpdatePermissionsRequest {
  string project_id = 1;
  repeated string allow = 2;
  repeated string ask = 3;
  repeated string deny = 4;
}
message UpdatePermissionsResponse {
  PermissionSet permissions = 1;
}

message SyncPermissionsFromDirRequest {
  string project_id = 1;
  string directory = 2;  // path to the repository root directory
}
message SyncPermissionsFromDirResponse {
  PermissionSet permissions = 1;  // merged permission set
}
